--- a/Scheduling_couple_of_tasks_on_a_single_machine.ipynb
+++ b/Scheduling_couple_of_tasks_on_a_single_machine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,17 +31,20 @@
     "        return sum(j_1)\n",
     "    return 0\n",
     "\n",
-    "#check if the pair is interleaved and return the sum a1 + P2\n",
+    "#check if the pair is interleaved and return the sum P1 + b2\n",
     "def check_interleaving(j_1,j_2):\n",
     "    if j_2[0] <= j_1[1] and j_1[2] <= j_2[1]: # a_j2 <= L_j1 and b_j1 <= L_j2\n",
-    "        return j_1[0] + sum(j_2)\n",
+    "        if(j_2[0]+j_2[1]<j_1[1]+j_1[2]):\n",
+    "            return j_2[2] + sum(j_1)\n",
+    "        else:\n",
+    "            return j_1[0] + sum(j_2)\n",
     "    return 0\n",
     "         "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,17 +108,17 @@
     "        for j in range(len(partial_schedule)):\n",
     "            lowest = 100000\n",
     "            if check_nesting(partial_schedule[j], S[i]) or check_interleaving(partial_schedule[j], S[i]):\n",
+    "                \n",
     "                partial_schedule.insert(j+1, S[i])\n",
     "                found_best_position = True\n",
     "                break\n",
     "        if not found_best_position:\n",
     "            partial_schedule.append(S[i])\n",
-    "    \n",
-    "    \n",
+    "            \n",
     "    if not return_S:\n",
     "        return makespan(partial_schedule)\n",
     "    else:\n",
-    "        return [S,makespan(partial_schedule)]\n",
+    "        return [partial_schedule,makespan(partial_schedule)]\n",
     "\n",
     "#This funtion returns M(S) =(j_1,j_[n/3],j_[2n/3],j_n,CSFS(S)).\n",
     "def M(S,CSFS_value):\n",
@@ -182,22 +185,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal makespan 77\n",
-      "Optimal sequence [(1, 5, 8), (2, 2, 2), (3, 3, 3), (1, 2, 5), (3, 3, 1), (1, 1, 4), (2, 1, 4), (5, 2, 1), (3, 5, 8), (3, 8, 2), (2, 1, 3), (4, 5, 1)]\n"
+      "82\n",
+      "88\n",
+      "82\n",
+      "83\n",
+      "82\n",
+      "88\n",
+      "84\n",
+      "83\n",
+      "82\n",
+      "82\n",
+      "85\n",
+      "83\n",
+      "83\n",
+      "82\n",
+      "82\n",
+      "83\n",
+      "82\n",
+      "86\n",
+      "81\n",
+      "81\n",
+      "81\n",
+      "81\n",
+      "84\n",
+      "85\n",
+      "84\n",
+      "81\n",
+      "83\n",
+      "82\n",
+      "82\n",
+      "84\n",
+      "82\n",
+      "81\n",
+      "85\n",
+      "84\n",
+      "81\n",
+      "85\n",
+      "83\n",
+      "84\n",
+      "82\n",
+      "82\n",
+      "86\n",
+      "82\n",
+      "83\n",
+      "82\n",
+      "81\n",
+      "87\n",
+      "81\n",
+      "80\n",
+      "84\n",
+      "82\n",
+      "86\n",
+      "84\n",
+      "84\n",
+      "83\n",
+      "80\n",
+      "84\n",
+      "82\n",
+      "84\n",
+      "85\n",
+      "81\n",
+      "84\n",
+      "85\n",
+      "84\n",
+      "86\n",
+      "84\n",
+      "80\n",
+      "84\n",
+      "86\n",
+      "84\n",
+      "87\n",
+      "84\n",
+      "83\n",
+      "79\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "81\n",
+      "86\n",
+      "82\n",
+      "84\n",
+      "85\n",
+      "82\n",
+      "85\n",
+      "82\n",
+      "87\n",
+      "84\n",
+      "81\n",
+      "82\n",
+      "81\n",
+      "83\n",
+      "82\n",
+      "84\n",
+      "82\n",
+      "83\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "85\n",
+      "82\n",
+      "86\n",
+      "Best Makespan 79 Best sequence [(3, 5, 8), (3, 8, 2), (2, 1, 3), (1, 1, 4), (2, 1, 4), (1, 5, 8), (3, 3, 3), (3, 3, 1), (2, 2, 2), (1, 2, 5), (4, 5, 1), (5, 2, 1)]\n"
      ]
     }
    ],
    "source": [
-    "S_optimal = tabu(generate_random_sequence(Jobs),3,1000)\n",
-    "print(\"Optimal makespan\", CSFS(S_optimal))\n",
-    "print(\"Optimal sequence\", CSFS(S_optimal,True)[0])"
+    "\n",
+    "best = 10000\n",
+    "s = []\n",
+    "for i in range(100):\n",
+    "    S_optimal = tabu(generate_random_sequence(Jobs),3,1000)\n",
+    "    print(CSFS(S_optimal))\n",
+    "    if CSFS(S_optimal)<best:\n",
+    "        s,best =  CSFS(S_optimal,True)\n",
+    "\n",
+    "print(\"Best Makespan\",best,\"Best sequence\", s)"
    ]
   }
  ],
